--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea
+*.iml
+.gradle
+build
+
+*.DS_Store
+Thumbs.db
+*.sw?
+.#*
+*#
+*~
+*.sublime-*
+
+Gemfile.lock
+.phabricator-comment
+archive.tar.gz
