--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 description = "GLiTR"
 
 group = 'com.nfl.dm.shield'
-version = '0.2.0-SNAPSHOT'
+version = '0.4.2-SNAPSHOT'
 
 buildscript {
     ext {
@@ -48,32 +48,20 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
 
     // NFL dependencies
-    compile("com.nfl.dm.shield:shield-consul-client:0.2.0-SNAPSHOT")
     compile("com.nfl.dm.shield:shield-web:0.0.1-SNAPSHOT")
     compile("com.nfl.dm.shield:shield-core:0.0.1-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-id:0.1.1-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-jwt-io:0.0.6-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-domain-graphql:0.4.7-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-domain-cassandra:0.4.5-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-domain-transport:0.1.2-SNAPSHOT")
-    compile("com.nfl.dm.shield:shield-object-store:0.0.5-SNAPSHOT") {
-        exclude group: 'org.slf4j'
-    }
-
 
     compile('commons-io:commons-io:2.4')
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 
-    // DataStax - Cassandra
-    compile("com.datastax.cassandra:cassandra-driver-core:3.0.0")
-    compile("com.datastax.cassandra:cassandra-driver-extras:3.0.0")
-    compile("com.datastax.cassandra:cassandra-driver-mapping:3.0.0")
 
     // Misc dependencies
     compile('com.graphql-java:graphql-java:2016-05-14T23-36-49')
     compile('org.apache.commons:commons-lang3:3.4')
     compile('commons-collections:commons-collections:3.2.2')
     compile('commons-beanutils:commons-beanutils:1.9.2')
-    compile('javax.inject:javax.inject:1') // used for creating prototype scope beans without depending on Spring
+    compile('com.google.code.findbugs:jsr305:3.0.0')
 
     compile("io.reactivex:rxjava:1.1.3")
     compile("com.googlecode.gentyref:gentyref:1.2.0")
@@ -84,7 +72,6 @@ dependencies {
     compile("org.antlr:stringtemplate:4.0.2") // string manipulation
     compile("org.eclipse.jetty:jetty-jmx:9.2.10.v20150310") // instrumentation
     compile("com.voodoodyne.jackson.jsog:jackson-jsog:1.1")    
-    compile("com.netflix.ribbon:ribbon:2.0.2")
 
 
     // Jackson dependencies
