--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,2 @@
-spring.profiles.active=test
-
-logging.level.org.neo4j.server=DEBUG
-logging.level.org.neo4j.ogm=DEBUG
-logging.level.org.neo4j.logging=DEBUG
-
 logging.level.com.nfl.dm=INFO
-logging.level.graphql=DEBUG
+logging.level.graphql=INFO
