--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 description = "GLiTR"
 
 group = 'com.nfl.dm.shield'
-version = '0.10.4-SNAPSHOT'
+version = '0.10.5-SNAPSHOT'
 
 buildscript {
     ext {
@@ -48,13 +48,11 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
 
     // NFL dependencies
-    compile("com.nfl.dm.shield:shield-web:0.0.1-SNAPSHOT")
     compile("com.nfl.dm.shield:shield-core:0.0.1-SNAPSHOT")
 
     compile('commons-io:commons-io:2.4')
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-
 
     // Misc dependencies
     compile('com.graphql-java:graphql-java:2016-05-14T23-36-49')
@@ -73,6 +71,7 @@ dependencies {
     compile("org.eclipse.jetty:jetty-jmx:9.2.10.v20150310") // instrumentation
     compile("com.voodoodyne.jackson.jsog:jackson-jsog:1.1")    
 
+    compile("javax.validation:validation-api:1.1.0.Final")
 
     // Jackson dependencies
     compile("com.fasterxml.jackson.core:jackson-core:2.6.2")
@@ -80,6 +79,11 @@ dependencies {
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.4") // handles jackson new java8 Date APIs
 
     // Test dependencies
+    testCompile("org.hibernate:hibernate-validator:5.2.4.Final")
+    testCompile("org.hibernate:hibernate-validator-annotation-processor:5.2.4.Final")
+    testCompile("javax.el:javax.el-api:3.0.0")
+    testCompile("org.glassfish:javax.el:3.0.0")
+
     testCompile("com.google.inject:guice:3.0") // weird dependency needed for neo4j tests, to be investigated
     testCompile("org.mockito:mockito-core:1+")
 
