clean up and syntax improvement
Summary: na

Test Plan: na

Reviewers: #shield, aboyer

Reviewed By: #shield, aboyer

Subscribers: jenkins_github_api

Differential Revision: https://phabricator.dm.nfl.com/D20693

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 description = "GLiTR"
 
 group = 'com.nfl.dm.shield'
-version = '0.10.6-SNAPSHOT'
+version = '0.10.7-SNAPSHOT'
 
 buildscript {
     ext {
@@ -111,7 +111,8 @@ sonarqube {
     properties {
         //noinspection GroovyAssignabilityCheck
         property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/testSpock.exec"
-
+        //noinspection GroovyAssignabilityCheck
+        property "sonar.coverage.exclusions", "**/*Exception.java"
     }
 }
 
