--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,9 @@
 description = "GLiTR"
 
 group = 'com.nfl.dm.shield'
-version = '0.10.7-SNAPSHOT'
+version = '0.11.0-SNAPSHOT'
 
 buildscript {
-    ext {
-        kotlinVersion = '1.0.2'
-    }
     repositories {
         maven {
             url "http://nexus.la3.nfl.com/nexus/content/groups/public"
@@ -15,13 +12,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.nfl.dm.shield.gradle:shield-plugin:1.0.+'
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
 
 apply plugin: 'com.nfl.dm.shield.gradle'
 apply plugin: 'idea'
-apply plugin: 'kotlin'
 apply plugin: 'groovy'
 
 jacoco {
@@ -43,55 +38,37 @@ repositories {
 }
 
 dependencies {
-    // Kotlin
-    compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion")
-    compile("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
+    // GraphQL dependencies
+    compile("com.graphql-java:graphql-java:2016-05-14T23-36-49")
 
-    // NFL dependencies
-    compile("com.nfl.dm.shield:shield-core:0.0.1-SNAPSHOT")
+    // Commons dependencies
+    compile("org.apache.commons:commons-lang3:3.4")
+    compile("commons-beanutils:commons-beanutils:1.9.2")
 
-    compile('commons-io:commons-io:2.4')
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    // Google dependencies
+    compile("com.google.code.findbugs:jsr305:3.0.0") // TODO: is this needed?
+    compile("com.google.guava:guava:19.0")
+    compile("com.googlecode.gentyref:gentyref:1.2.0")
 
     // Misc dependencies
-    compile('com.graphql-java:graphql-java:2016-05-14T23-36-49')
-    compile('org.apache.commons:commons-lang3:3.4')
-    compile('commons-collections:commons-collections:3.2.2')
-    compile('commons-beanutils:commons-beanutils:1.9.2')
-    compile('com.google.code.findbugs:jsr305:3.0.0')
-
-    compile("io.reactivex:rxjava:1.1.3")
-    compile("com.googlecode.gentyref:gentyref:1.2.0")
     compile("me.moocar:logback-gelf:0.12")
     compile("ma.glasnost.orika:orika-core:1.4.6") {
         exclude group: 'org.slf4j'
     }
-    compile("org.antlr:stringtemplate:4.0.2") // string manipulation
-    compile("org.eclipse.jetty:jetty-jmx:9.2.10.v20150310") // instrumentation
-    compile("com.voodoodyne.jackson.jsog:jackson-jsog:1.1")    
-
-    compile("javax.validation:validation-api:1.1.0.Final")
 
     // Jackson dependencies
     compile("com.fasterxml.jackson.core:jackson-core:2.6.2")
     compile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
     compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.4") // handles jackson new java8 Date APIs
 
-    // Test dependencies
-    testCompile("org.hibernate:hibernate-validator:5.2.4.Final")
-    testCompile("org.hibernate:hibernate-validator-annotation-processor:5.2.4.Final")
-    testCompile("javax.el:javax.el-api:3.0.0")
-    testCompile("org.glassfish:javax.el:3.0.0")
+    // Misc dependencies
+    compile("io.reactivex:rxjava:1.1.3")
+    compile("javax.validation:validation-api:1.1.0.Final")
 
-    testCompile("com.google.inject:guice:3.0") // weird dependency needed for neo4j tests, to be investigated
-    testCompile("org.mockito:mockito-core:1+")
-
-    // Spock test dependencies
-    testCompile(group: 'junit', name: 'junit', version: '4.12')
-    testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
-    testCompile('org.codehaus.groovy:groovy-all:2.4.4')
-    testCompile("com.blogspot.toomuchcoding:spock-subjects-collaborators-extension:1.1.0") // used for injecting mocks
+     // Spock test dependencies
+    testCompile("junit:junit:4.12")
+    testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
+    testCompile("org.codehaus.groovy:groovy-all:2.4.4")
 }
 
 task testSpock(type: Test) {
