--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 description = "GLiTR"
 
 group = 'com.nfl.glitr'
-version = '1.2.0-SNAPSHOT'
+version = '1.3.0-SNAPSHOT'
 
 buildscript {
     repositories {
@@ -34,7 +34,6 @@ repositories {
         url "http://nexus.la3.nfl.com/nexus/content/groups/public"
     }
     mavenCentral()
-    maven { url  "http://dl.bintray.com/andimarek/graphql-java" }
 }
 
 dependencies {
@@ -46,14 +45,9 @@ dependencies {
     compile("commons-beanutils:commons-beanutils:1.9.2")
 
     // Google dependencies
-    compile("com.google.code.findbugs:jsr305:3.0.0") // TODO: is this needed?
+    compile("com.google.code.findbugs:jsr305:3.0.0")
     compile("com.google.guava:guava:19.0")
     compile("com.googlecode.gentyref:gentyref:1.2.0")
-
-    // Jackson dependencies
-    compile("com.fasterxml.jackson.core:jackson-core:2.6.2")
-    compile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.4") // handles jackson new java8 Date APIs
 
     // Misc dependencies
     compile("io.reactivex:rxjava:1.1.3")
@@ -63,6 +57,7 @@ dependencies {
     testCompile("junit:junit:4.12")
     testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
     testCompile("org.codehaus.groovy:groovy-all:2.4.4")
+    testCompile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
 }
 
 task testSpock(type: Test) {
