Added developers for Maven Central publication

--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,16 @@ publishing {
                             distribution 'repo'
                         }
                     }
+                    developers {
+                        developer {
+                            id 'tinnou'
+                            name 'Antoine Boyer'
+                        }
+                        developer {
+                            id 'vaant'
+                            name 'Arash Shokoufandeh'
+                        }
+                    }
                 }
             }
         }
