--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
 bintray.user=DUMMY_USER
 bintray.key=DUMMY_KEY
 
+maven.central.sync=false
 sonatype.username=DUMMY_SONATYPE_USER
 sonatype.password=DUMMY_SONATYPE_PASSWORD
+
+PROJECT_GITHUB_REPO_URL=https://github.com/nfl/glitr
+PROJECT_LICENSE_URL=https://github.com/nfl/glitr/blob/master/LICENSE
