--- a/build.gradle
+++ b/build.gradle
@@ -57,13 +57,13 @@ dependencies {
     // Misc dependencies
     compile("io.reactivex:rxjava:1.1.3")
     compile("javax.validation:validation-api:1.1.0.Final")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
 
      // Spock test dependencies
     testCompile("junit:junit:4.12")
     testCompile("cglib:cglib-nodep:3.2.4")  // for spock mocking, need later version for Java 8
     testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
     testCompile("org.codehaus.groovy:groovy-all:2.4.4")
-    testCompile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
 }
 
 task testSpock(type: Test) {
