--- a/build.gradle
+++ b/build.gradle
@@ -51,13 +51,13 @@ dependencies {
 
     // Google dependencies
     compile("com.google.code.findbugs:jsr305:3.0.0")
-    compile("com.google.guava:guava:19.0")
+    compile("com.google.guava:guava:27.0.1-jre")
     compile("com.googlecode.gentyref:gentyref:1.2.0")
 
     // Misc dependencies
     compile("io.reactivex:rxjava:1.1.3")
     compile("javax.validation:validation-api:1.1.0.Final")
-    compile("com.fasterxml.jackson.core:jackson-databind:2.6.2")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.9.8")
     compile ("net.objecthunter:exp4j:0.4.8")
 
     // Spock test dependencies
