--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ repositories {
 }
 
 dependencies {
+    compile("com.nfl.glitr:glitr-core:0.0.4")
+
     // GraphQL dependencies
     compile("com.graphql-java:graphql-java:12.0")
 
