--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,10 @@ repositories {
 }
 
 dependencies {
+    compile("com.nfl.glitr:glitr-core:0.0.5")
+
     // GraphQL dependencies
-    compile("com.graphql-java:graphql-java:10.0")
+    compile("com.graphql-java:graphql-java:12.0")
 
     // Commons dependencies
     compile("org.apache.commons:commons-lang3:3.8.1")
