--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
 jacoco {
-    toolVersion = "0.7.5.201505241946"
+    toolVersion = "0.8.4"
 }
 
 //noinspection GroovyUnusedAssignment
@@ -45,7 +45,7 @@ dependencies {
     compile("com.nfl.glitr:glitr-core:0.0.5")
 
     // GraphQL dependencies
-    compile("com.graphql-java:graphql-java:12.0")
+    compile("com.graphql-java:graphql-java:13.0")
 
     // Commons dependencies
     compile("org.apache.commons:commons-lang3:3.8.1")
@@ -59,12 +59,12 @@ dependencies {
     // Misc dependencies
     compile("io.reactivex:rxjava:1.1.3")
     compile("javax.validation:validation-api:1.1.0.Final")
-    compile("com.fasterxml.jackson.core:jackson-databind:2.9.8")
+    compile("com.fasterxml.jackson.core:jackson-databind:2.9.9.2")
     compile ("net.objecthunter:exp4j:0.4.8")
 
     // Spock test dependencies
     testCompile("junit:junit:4.12")
-    testCompile("cglib:cglib-nodep:3.2.4")  // for spock mocking, need later version for Java 8
+    testCompile("cglib:cglib-nodep:3.2.12")  // for spock mocking, need later version for Java 8
     testCompile("org.spockframework:spock-core:1.3-groovy-2.5")
     testCompile("org.codehaus.groovy:groovy-all:2.5.7")
 }
